tests/snapshots/cli_preflight__preflight_snapshots__preflight_newer_stdout.snap
---
source: tests/cli_preflight.rs
expression: normalize(&stdout)
---
Shapes CLI v[X.Y.Z]

STORE AHEAD OF CLI: Run `cargo install shapes-cli` — .shapes/ store is at version 999.0.0 but this CLI only supports up to 0.2.0.
