tests/snapshots/cli_preflight__preflight_snapshots__preflight_outdated_stdout.snap
---
source: tests/cli_preflight.rs
expression: normalize(&stdout)
---
Shapes CLI v[X.Y.Z]

MIGRATION NEEDED: Run `shapes migrate` — .shapes/ store is at version 0.1.0 but this CLI expects 0.2.0.
